--- a/recipes/CommonVoice/ASR/CTC/hparams/train_it_with_crdnn.yaml
+++ b/recipes/CommonVoice/ASR/CTC/hparams/train_it_with_crdnn.yaml
@@ -51,7 +51,7 @@ test_dataloader_options:
     num_workers: 4
 
 # BPE parameters
-token_type: unigram  # ["unigram", "bpe", "char"]
+token_type: char  # ["unigram", "bpe", "char"]
 character_coverage: 1.0
 
 # Feature parameters (FBANKS etc)
@@ -66,7 +66,7 @@ dnn_neurons: 1024
 dropout: 0.15
 
 # Outputs
-output_neurons: 500  # BPE size, index(blank/eos/bos) = 0
+output_neurons: 76  # BPE size, index(blank/eos/bos) = 0
 
 # Decoding parameters
 # Be sure that the bos and eos index match with the BPEs ones
