--- a/recipes/CommonVoice/ASR/CTC/hparams/train_it_with_crdnn.yaml
+++ b/recipes/CommonVoice/ASR/CTC/hparams/train_it_with_crdnn.yaml
@@ -47,7 +47,7 @@ dataloader_options:
     batch_size: !ref <batch_size>
     num_workers: 4
 test_dataloader_options:
-    batch_size: !ref <test_batch_size>
+    batch_size: !ref <batch_size>
     num_workers: 4
 
 # BPE parameters
