--- a/recipes/CommonVoice/ASR/CTC/hparams/train_it_with_mixer_attdec.yaml
+++ b/recipes/CommonVoice/ASR/CTC/hparams/train_it_with_mixer_attdec.yaml
@@ -120,8 +120,30 @@ CNN: !new:speechbrain.lobes.models.convolution.ConvolutionFrontEnd
     strides: (2, 2, 1)
     residuals: (False, False, True)
 
+dec: !new:speechbrain.nnet.RNN.AttentionalRNNDecoder
+    enc_dim: !ref <dnn_neurons>
+    input_size: 1024
+    rnn_type: lstm
+    attn_type: location
+    hidden_size: 1024
+    attn_dim: 1024
+    num_layers: 1
+    scaling: 1.0
+    channels: 10
+    kernel_size: 100
+    re_init: True
+    dropout: 0.15
+
+emb: !new:speechbrain.nnet.embedding.Embedding
+    num_embeddings: 1024
+    embedding_dim: 128
+
 ctc_lin: !new:speechbrain.nnet.linear.Linear
     input_size: !ref <mixer_output_dim>
+    n_neurons: !ref <output_neurons>
+
+seq_lin: !new:speechbrain.nnet.linear.Linear
+    input_size: !ref <dec_neurons>
     n_neurons: !ref <output_neurons>
 
 log_softmax: !new:speechbrain.nnet.activations.Softmax
@@ -130,14 +152,20 @@ log_softmax: !new:speechbrain.nnet.activations.Softmax
 ctc_cost: !name:speechbrain.nnet.losses.ctc_loss
     blank_index: !ref <blank_index>
 
+seq_cost: !name:speechbrain.nnet.losses.nll_loss
+    label_smoothing: 0.1
+
 modules:
     CNN: !ref <CNN>
     mixer: !ref <mixer>
     enc: !ref <enc>
+    dec: !ref <dec>
+    emb: !ref <emb>
     ctc_lin: !ref <ctc_lin>
+    seq_lin: !ref <seq_lin>
 
 model: !new:torch.nn.ModuleList
-    - [!ref <CNN>, !ref <enc>, !ref <ctc_lin>]
+    - [!ref <CNN>, !ref <emb>, !ref <enc>, !ref <ctc_lin>, !ref <seq_lin>]
 
 model_opt_class: !name:torch.optim.Adadelta
     lr: !ref <lr>
@@ -149,6 +177,22 @@ lr_annealing_model: !new:speechbrain.nnet.schedulers.NewBobScheduler
     improvement_threshold: 0.005
     annealing_factor: 0.75
     patient: 0
+
+beam_searcher: !new:speechbrain.decoders.S2SRNNBeamSearcher
+    embedding: !ref <emb>
+    decoder: !ref <dec>
+    linear: !ref <seq_lin>
+    ctc_linear: !ref <ctc_lin>
+    bos_index: !ref <bos_index>
+    eos_index: !ref <eos_index>
+    blank_index: !ref <blank_index>
+    min_decode_ratio: !ref <min_decode_ratio>
+    max_decode_ratio: !ref <max_decode_ratio>
+    beam_size: !ref <beam_size>
+    eos_threshold: !ref <eos_threshold>
+    using_max_attn_shift: !ref <using_max_attn_shift>
+    max_attn_shift: !ref <max_attn_shift>
+    temperature: !ref <temperature>
 
 checkpointer: !new:speechbrain.utils.checkpoints.Checkpointer
     checkpoints_dir: !ref <save_folder>
