--- a/recipes/CommonVoice/ASR/CTC/hparams/train_fr_with_wav2vec.yaml
+++ b/recipes/CommonVoice/ASR/CTC/hparams/train_fr_with_wav2vec.yaml
@@ -64,6 +64,7 @@ wav2vec_output_dim: 1024
 dnn_neurons: 1024
 freeze_wav2vec: False
 freeze_feature_extractor: True
+warmup_steps: 100
 apply_spec_augment: False
 output_norm: True
 
